--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header>
+		<div class="col-xs-3">
+			<div class="circle">
+				<br />
+				B2ST
+				<br />
+				Yoseob
+				<br />
+				12:30
+			</div>
+		</div>
+		<div class="col-xs-4">
+			Beast is the best group out there because of their skills and talent.
+		</div>
+		<div class="col-xs-5">
+			<%= link_to 'Contribute', '#' %>
+			<%= link_to 'About', '#' %>
+	</header>
+
+	<br class="clear" />
 
 <%= yield %>
 
