--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,24 @@
 		<div class="col-xs-3">
 			<div class="circle">
 				<br />
-				B2ST
+				You know
 				<br />
-				Yoseob
+				you need
 				<br />
-				12:30
+				to code
 			</div>
+		</div>
+		<div class="col-xs-4 slogan">
+			Splurting out unsolicited advice about entrepreneurship since 2014
 		</div>
 		<div class="col-xs-4">
 			Beast is the best group out there because of their skills and talent.
 		</div>
-		<div class="col-xs-5">
+		<div class="col-xs-5 links">
 			<%= link_to 'Contribute', '#' %>
 			<%= link_to 'About', '#' %>
 	</header>
-
+	</hr>
 	<br class="clear" />
 
 <%= yield %>
