--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,30 +8,46 @@
 </head>
 <body>
 	<header>
+		<center>
 		<div class="col-xs-3">
-			<div class="circle">
-				<br />
-				You know
-				<br />
-				you need
-				<br />
-				to code
-			</div>
+			<%= link_to root_path, :class => 'logo' do %>
+				<div class="circle">
+					<br />
+					You know
+					<br />
+					you need
+					<br />
+					to code
+				</div>
+			<% end %>
 		</div>
 		<div class="col-xs-4 slogan">
 			Splurting out unsolicited advice about entrepreneurship since 2014
 		</div>
-		<div class="col-xs-4">
-			Beast is the best group out there because of their skills and talent.
-		</div>
 		<div class="col-xs-5 links">
-			<%= link_to 'Contribute', '#' %>
+			<%= link_to 'Contribute', new_quote_path %>
 			<%= link_to 'About', '#' %>
+		</center>
 	</header>
-	</hr>
+	<hr/>
 	<br class="clear" />
 
-<%= yield %>
+  	<div class="container">
+ 	   <%= yield %>
+ 	 </div>
+ 	 </br>
+
+	 <div class="footer">
+    	<div class="container">
+	    	<div class="col-xs-6">
+	    		<%= link_to "This isn't enough, I need more", root_path, :class => 'next-quote' %>
+		    </div>
+		    <div class="col-xs-6 footer-blurb">
+		    	Proudly made by Farrah Lee<br/>
+		    	Want to build your own Splurty Web App - <a href="http://thefirehoseproject.com">Learn how to code here</a>
+		    </div>
+	    </div>
+ 	 </div>
 
 </body>
 </html>
