--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,14 +25,43 @@
 			Splurting out unsolicited advice about entrepreneurship since 2014
 		</div>
 		<div class="col-xs-5 links">
-			<%= link_to 'Contribute', new_quote_path %>
-			<%= link_to 'About', '#' %>
+			<%= link_to 'Contribute', '#', :data => {:toggle => 'modal', :target => '#myModal'} %>
+			<%= link_to 'About', about_path %>
+		</div>
 		</center>
 	</header>
+
+	<!-- Modal -->
+  	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="myModalLabel">Contribute Your Quote</h4>
+          </div>
+          <%= simple_form_for Quote.new do |f| %>
+            <div class="modal-body">
+              <%= f.input :saying %>
+			  <%= f.input :author %>
+			</div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <%= f.submit 'Add Quote', :class => 'btn btn-danger' %>
+            </div>
+		  <% end %>
+        </div>
+      </div>
+  	</div>
+
 	<hr/>
 	<br class="clear" />
 
   	<div class="container">
+  		<% if flash[:error].present? %>
+  			<div class="col-xs-10 col-xs-offset-1 alert alert-danger">
+  				<%= flash[:error].html_safe %>
+  			</div>
+  		<%  end %>
  	   <%= yield %>
  	 </div>
  	 </br>
@@ -44,7 +73,7 @@
 		    </div>
 		    <div class="col-xs-6 footer-blurb">
 		    	Proudly made by Farrah Lee<br/>
-		    	Want to build your own Splurty Web App - <a href="http://thefirehoseproject.com">Learn how to code here</a>
+		    	Want to build your own Splurty Web App? <a href="http://thefirehoseproject.com">Learn how to code here</a>
 		    </div>
 	    </div>
  	 </div>
