--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,6 +1,13 @@
 <center>
-<h1>Welcome to my Awesome Web App</h1>
+<h1>
+  <span>SPLURTY / No. <%= @quote.id %></span>
+  Here's the <u>best unsolicited startup advice</u> you can get!
+</h1>
 </br>
 <h2><%= @quote.saying %></h2>
-<h2>- <%= @quote.author %></h2>
+<h2 class="pull-right">- <%= @quote.author %></h2>
+
+<br class="clear" />
+<br />
+<br />
 </center>
